ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = src

EXTRA_DIST =						\
	COPYING						\
	AUTHORS						\
	INSTALL						\
	README						\
	NEWS						\
	autogen.sh					\
	config.h

MAINTAINERCLEANFILES =					\
	ChangeLog					\
	INSTALL						\
	aclocal.m4					\
	build-aux/					\
	config.h.in

-include $(top_srcdir)/git.mk
